18_reverse_str/grade.txt
Grading at Sun Jul 26 16:16:32 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:25:3: error: implicit declaration of function ‘strrev’ [-Werror=implicit-function-declaration]
   strrev(str);
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
